--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,10 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  /* background: var(--background); */
+  /* background: linear-gradient(45deg,rgb(151, 79, 79),rgb(120, 120, 201));
+  background-repeat: no-repeat; */
+  height: 3000px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
