--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -14,17 +20,37 @@
   }
 }
 
+html {
+  height: 100%
+}
+
 body {
   color: var(--foreground);
   /* background: var(--background); */
   /* background: linear-gradient(45deg,rgb(151, 79, 79),rgb(120, 120, 201));
   background-repeat: no-repeat; */
-  height: 3000px;
+  height: 187.5rem;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.clip-star {
+  clip-path: polygon(
+    50% 0%, 
+    61% 35%, 
+    98% 35%, 
+    68% 57%, 
+    79% 91%, 
+    50% 70%, 
+    21% 91%, 
+    32% 57%, 
+    2% 35%, 
+    39% 35%
+  );
 }
