--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,3 +53,12 @@ body {
     39% 35%
   );
 }
+
+.active {
+  width: 40%
+}
+
+.img-container img {
+  transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
+  border-radius: 1rem;
+}
