--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   /* background: var(--background); */
   /* background: linear-gradient(45deg,rgb(151, 79, 79),rgb(120, 120, 201));
   background-repeat: no-repeat; */
-  height: 3000px;
+  /* height: 5000px; */
   font-family: Arial, Helvetica, sans-serif;
 }
 
