body overflow-x: hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@
 }
 
 body {
+  overflow-x: hidden;
   color: var(--foreground);
   /* background: var(--background); */
   /* background: linear-gradient(45deg,rgb(151, 79, 79),rgb(120, 120, 201));
